Phase 0: Critical Foundation - Security & Database Complete
## Phase 0B: Security Hardening (COMPLETE)
- Replaced bcrypt simulator with real bcrypt (v6.0.0)
- Implemented PostgreSQL API key persistence with hashing
- Removed hardcoded credentials from docker-compose
- Added JWT secret validation (min 32 chars)
- npm audit: 0 vulnerabilities
- Created security-scan.js with 23 security checks
- Added security headers (CSP, HSTS, X-Frame)

## Phase 0D: Database Migration (COMPLETE)
- Renamed dash.db → .godel/godel.db
- Migrated table swarms → teams (8 rows)
- Migrated column swarm_id → team_id (43 agents, 11 events)
- Created migration scripts with backup/rollback
- Updated environment variables (DASH_* → GODEL_*)
- Added npm scripts: db:migrate, db:validate, config:validate

## Phase 0 Status
- Security: 100% ✅
- Database: 100% ✅
- TypeScript: In progress (5 errors remaining)
- Tests: In progress

## Files Changed
- package.json (security scripts)
- docker-compose.yml (env vars)
- src/config/defaults.ts, loader.ts
- scripts/migrations/ (new)
- SECURITY_FIXES.md, MIGRATION_REPORT.md

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,10 @@ GODEL_CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 # SECURITY: Session secret for cookie signing (generate with: openssl rand -base64 32)
 SESSION_SECRET=your_session_secret_here_min_32_chars_long
 
+# SECURITY: JWT secret for token signing (generate with: openssl rand -base64 64)
+# Minimum 32 characters required, 64+ recommended for production
+GODEL_JWT_SECRET=your_jwt_secret_here_min_32_chars_recommended_64
+
 # Node environment: 'development' | 'production' | 'test'
 NODE_ENV=development
 
@@ -100,7 +104,9 @@ REDIS_DB=0
 # SQLite Database (Legacy - for backward compatibility)
 # =============================================================================
 
-GODEL_DB_PATH=./godel.db
+# Path to SQLite database file (relative to project root or absolute path)
+# Default: ./.godel/godel.db
+GODEL_DB_PATH=./.godel/godel.db
 
 # =============================================================================
 # Security & Permissions
